--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  get: ^4.1.4
+  #状态管理
+  provider: ^5.0.0
+  #屏幕适配
+  flutter_screenutil: ^5.0.0+2
+#  battery_plus: "^1.0.2"
+#  connectivity_plus: "^1.0.3"
+#  device_info_plus: "^2.0.1"
+#  network_info_plus: "^1.0.2"
+  #获取包信息
+  package_info_plus: "^1.0.3"
+#  sensors_plus: "^1.0.2"
+#  share_plus: "^2.1.4"
+#  android_alarm_manager_plus: "^1.0.2"
+#  android_intent_plus: "^1.0.2"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
